@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>31</version>
+  <version>32</version>
   <dependencies>
       <dependency>profile-plone.app.registry:default</dependency>
   </dependencies>
